Initial version of generate_schemas

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Project-Specific
 *.bigqueryrc
 data/table_definition_files/*
+transformers/bq_make_tables.sh
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
